compilerGUI/ErrorLog.txt
Compile.java:15: error: no suitable constructor found for Scanner(OutputStream)
        Scanner s = new Scanner(p.getOutputStream()); //This line will be handled later.
                    ^
    constructor Scanner.Scanner(Readable,Pattern) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(Readable) is not applicable
      (argument mismatch; OutputStream cannot be converted to Readable)
    constructor Scanner.Scanner(InputStream) is not applicable
      (argument mismatch; OutputStream cannot be converted to InputStream)
    constructor Scanner.Scanner(InputStream,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(InputStream,Charset) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(File) is not applicable
      (argument mismatch; OutputStream cannot be converted to File)
    constructor Scanner.Scanner(File,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(File,Charset) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(File,CharsetDecoder) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(Path) is not applicable
      (argument mismatch; OutputStream cannot be converted to Path)
    constructor Scanner.Scanner(Path,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(Path,Charset) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(String) is not applicable
      (argument mismatch; OutputStream cannot be converted to String)
    constructor Scanner.Scanner(ReadableByteChannel) is not applicable
      (argument mismatch; OutputStream cannot be converted to ReadableByteChannel)
    constructor Scanner.Scanner(ReadableByteChannel,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor Scanner.Scanner(ReadableByteChannel,Charset) is not applicable
      (actual and formal argument lists differ in length)
Compile.java:38: error: no suitable method found for directory(String)
            Process p2 = new ProcessBuilder("javac *.java").directory(output.getAbsolutePath()).start(); //To be fixed later.
                                                           ^
    method ProcessBuilder.directory() is not applicable
      (actual and formal argument lists differ in length)
    method ProcessBuilder.directory(File) is not applicable
      (argument mismatch; String cannot be converted to File)
Compile.java:40: error: no suitable method found for directory(String)
            Process p3 = new ProcessBuilder("del /s *.java").directory(output.getAbsolutePath()).start(); //To be fixed later
                                                            ^
    method ProcessBuilder.directory() is not applicable
      (actual and formal argument lists differ in length)
    method ProcessBuilder.directory(File) is not applicable
      (argument mismatch; String cannot be converted to File)
Compile.java:45: error: no suitable method found for directory(String)
            Process p2 = new ProcessBuilder("javac *.java").directory(output.getAbsolutePath()).start();//To be fixed later
                                                           ^
    method ProcessBuilder.directory() is not applicable
      (actual and formal argument lists differ in length)
    method ProcessBuilder.directory(File) is not applicable
      (argument mismatch; String cannot be converted to File)
Compile.java:47: error: no suitable method found for directory(String)
            Process p3 = new ProcessBuilder("rm -r *.java").directory(output.getAbsolutePath()).start();//To be fixed later
                                                           ^
    method ProcessBuilder.directory() is not applicable
      (actual and formal argument lists differ in length)
    method ProcessBuilder.directory(File) is not applicable
      (argument mismatch; String cannot be converted to File)
Compile.java:51: error: cannot find symbol
        Scanner s = new Scanner(p2.getOutputStream());
                                ^
  symbol:   variable p2
  location: class Compile
Main.java:7: error: Main is not abstract and does not override abstract method actionPerformed(ActionEvent) in ActionListener
public class Main extends JFrame implements ActionListener{
       ^
7 errors
~/CompileingCodeForAThing/compilerGUI$ 
